--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,9 +2,6 @@
 
 * {
 
-margin: 0;
-padding: 0;
-
 box-sizing: border-box;
 
 text-decoration: none;
@@ -19,24 +16,34 @@ font-family: 'Nunito', sans-serif;
 
 }
 
+body{
+    background-color: #D3D3D3;
+}
+
+
 .navbar {
     background-color: #72BF78;
     width: 100%;
-    height: 35vh;
+    height: 30vh; 
+    display: flex;
+    align-items: center;
+    padding: 0 20px; 
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
 }
 
 .logo {
-    display: inline-flex;
-    height: 50px;
-    width: 50px;
+    height: 80px;
+    width: 80px;
     border-radius: 50%;
-    margin-left: 80px;
+    overflow: hidden; 
 }
 
 .sitename {
-    display: inline-flex;
-    margin-left: 30px;
-    margin-top: 100px;
+    margin-left: 15px; 
+    font-size: 20px;
+    font-weight: 600;
+    color: #fff;
+    font-family: Arial, sans-serif;
 }
 
 
@@ -83,6 +90,20 @@ font-family: 'Nunito', sans-serif;
     background-color: whitesmoke; 
 }
 
+.open .part1 {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start; 
+    justify-content: center;
+    padding-left: 20px; 
+    padding-bottom: 0px;
+    color: #000;
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+}
+
 /* qr code image */
 
 
@@ -93,11 +114,9 @@ font-family: 'Nunito', sans-serif;
 
 /* left side text align*/
 
-#use{
-    display: inline-flex;
-    margin-right: 30vw;
-    margin-bottom: 28vh;
-    margin-left: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+#use, #Guide1, #Guide2, #Guide3, #Guide4 {
+    margin-bottom: 15px; 
     color: black;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
